--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
     
     <title>💝 커플 기념일 선물 추천기 - AI가 추천하는 특별한 선물</title>
   </head>
+  <meta name="google-site-verification" content="P6X5BpKy6Tqy78Teu6aFK1jQB1ZyyxpP9tFKHa4OOgA" />
   <body>
     <noscript>이 앱을 실행하려면 JavaScript가 필요합니다.</noscript>
     <div id="root"></div>
