SEO 최적화 완료: 키워드 최적화, 메타 태그 개선, 사이트맵 추가
- HTML 메타 태그 및 제목 최적화 (10개 핵심 키워드 반영)
- 메인 페이지 콘텐츠에 SEO 키워드 자연스럽게 삽입
- About 페이지 콘텐츠 최적화
- 구조화된 데이터(JSON-LD) 개선
- 내부 링크 구조 개선 (네비게이션, 푸터)
- 이미지 alt 태그 및 접근성 개선
- 사이트맵(sitemap.xml) 및 robots.txt 생성
- 페이지별 고유 메타 설명 작성

최적화된 키워드: 커플 선물 추천, AI 선물 추천, 기념일 선물, 맞춤형 선물, 선물지니, 생일 선물, 연인 선물, 선물 아이디어, 예산별 선물, 쿠팡 선물

--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,27 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ef4444" />
-    <meta name="description" content="AI가 추천하는 커플 기념일 선물 추천 서비스 - 모든 연령대와 관계를 위한 맞춤형 선물을 찾아보세요" />
-    <meta name="keywords" content="커플선물, 기념일선물, 선물추천, AI추천, 쿠팡파트너스, 생일선물, 결혼기념일, 발렌타인데이, 화이트데이, 크리스마스선물" />
+    <meta name="description" content="AI 선물 추천 서비스 선물지니 - 커플 선물, 기념일 선물, 맞춤형 선물 아이디어를 예산별로 추천해드립니다. 연인 선물부터 생일 선물까지 쿠팡에서 바로 구매 가능!" />
+    <meta name="keywords" content="커플 선물 추천, AI 선물 추천, 기념일 선물, 맞춤형 선물, 선물지니, 생일 선물, 연인 선물, 선물 아이디어, 예산별 선물, 쿠팡 선물, 선물 추천 서비스, 커플 기념일, 결혼기념일, 밸런타인데이, 화이트데이, 크리스마스선물" />
     <meta name="author" content="선물지니 GiftGenie" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="ko" />
     <meta name="revisit-after" content="1 days" />
     <link rel="canonical" href="https://couplegift.netlify.app/" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://couplegift.netlify.app/" />
-    <meta property="og:title" content="커플 기념일 선물 추천기" />
-    <meta property="og:description" content="AI가 추천하는 특별한 기념일 선물을 찾아보세요!" />
+    <meta property="og:title" content="선물지니 - AI 맞춤형 커플 선물 추천 서비스" />
+    <meta property="og:description" content="AI가 추천하는 맞춤형 선물 아이디어! 커플 선물, 기념일 선물, 생일 선물을 예산별로 추천받고 쿠팡에서 바로 구매하세요" />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://couplegift.netlify.app/" />
-    <meta property="twitter:title" content="커플 기념일 선물 추천기" />
-    <meta property="twitter:description" content="AI가 추천하는 특별한 기념일 선물을 찾아보세요!" />
+    <meta property="twitter:title" content="선물지니 - AI 맞춤형 커플 선물 추천 서비스" />
+    <meta property="twitter:description" content="AI가 추천하는 맞춤형 선물 아이디어! 커플 선물, 기념일 선물, 생일 선물을 예산별로 추천받고 쿠팡에서 바로 구매하세요" />
     <meta property="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -45,10 +46,12 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "선물지니 GiftGenie",
-      "description": "AI가 추천하는 커플 기념일 선물 추천 서비스 - 모든 연령대와 관계를 위한 맞춤형 선물을 찾아보세요",
+      "alternateName": "AI 맞춤형 커플 선물 추천 서비스",
+      "description": "AI 맞춤형 커플 선물 추천 서비스 - 기념일 선물, 생일 선물, 연인 선물 아이디어를 예산별로 추천하고 쿠팡에서 바로 구매 가능",
       "url": "https://couplegift.netlify.app/",
       "applicationCategory": "LifestyleApplication",
       "operatingSystem": "웹 브라우저",
+      "keywords": "커플 선물 추천, AI 선물 추천, 기념일 선물, 맞춤형 선물, 선물지니, 생일 선물, 연인 선물, 선물 아이디어, 예산별 선물, 쿠팡 선물",
       "offers": {
         "@type": "Offer",
         "price": "0",
@@ -56,12 +59,26 @@
       },
       "publisher": {
         "@type": "Organization",
-        "name": "선물지니 GiftGenie"
-      }
+        "name": "선물지니 GiftGenie",
+        "url": "https://couplegift.netlify.app/"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://couplegift.netlify.app/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      },
+      "featureList": [
+        "AI 맞춤형 선물 추천",
+        "커플 선물 추천",
+        "기념일 선물 아이디어",
+        "생일 선물 추천",
+        "예산별 선물 추천",
+        "쿠팡 연동 구매"
+      ]
     }
     </script>
     
-    <title>💝 커플 기념일 선물 추천기 - AI가 추천하는 특별한 선물</title>
+    <title>선물지니 - AI 맞춤형 커플 선물 추천 | 기념일 선물 아이디어</title>
     <meta name="google-site-verification" content="P6X5BpKy6Tqy78Teu6aFK1jQB1ZyyxpP9tFKHa4OOgA" />
   </head>
 
